# backend/server/src/routes/users/mod.rs
@@ -2,15 +2,19 @@ use utoipa_axum::{router::OpenApiRouter, routes};
 
 use crate::ServerState;
 
-pub mod get;
-pub mod post;
-pub mod put;
+mod get;
+mod post;
+mod put;
+
+mod roles;
 
 pub fn router() -> OpenApiRouter<ServerState> {
     OpenApiRouter::new()
         .nest(
             "/:id",
-            OpenApiRouter::new().routes(routes!(get::get_user, put::update_user)),
+            OpenApiRouter::new()
+                .routes(routes!(get::get_user, put::update_user))
+                .nest("/roles", roles::router()),
         )
         .routes(routes!(get::get_users, post::create_user))
 }
