# backend/server/src/routes/users/roles/delete.rs
@@ -7,24 +7,25 @@ use http::StatusCode;
 
 use crate::{Error, Result};
 
-/// Delete a role
+/// Remove a role from a user
 #[utoipa::path(
     delete,
     path = "",
-    tag = "Roles",
+    tag = "Users",
     responses(
-        (status = 201, description = "Role deleted successfully"),
-        (status = 404, description = "Role not found"),
+        (status = 201, description = "Role removed successfully"),
+        (status = 404, description = "Role doesn't exist")
     ),
     params(
-        ("id", Path, description = "Role database ID")
+        ("id", Path, description = "User database ID"),
+        ("role_id", Path, description = "Role database ID")
     )
 )]
-pub async fn delete_role(
-    Path(id): Path<i64>,
+pub async fn remove_user_role(
     State(pool): State<SqlitePool>,
+    Path((id, role_id)): Path<(i64, i64)>,
 ) -> Result<impl IntoResponse> {
-    let count = logic::roles::delete_role(&pool, id).await?;
+    let count = logic::roles::delete_user_role(&pool, id, role_id).await?;
 
     if count == 0 {
         Err(Error::NotFound("Role not found".to_string()))
